2008-04-16  Ludovic Courtès  <ludo@gnu.org>

	* ports.c (scm_getc, scm_putc, scm_puts): Moved...
	* inline.h: ... here.  Noticeably improves `read' performance.

2008-04-15  Ludovic Courtès  <ludo@gnu.org>
	    Julian Graham  <joolean@gmail.com>

	* read.c (scm_keyword_postfix): New.
	(scm_read_opts): Update docstring for `keywords'.
	(scm_read_mixed_case_symbol): Add support for postfix keywords.

2008-04-13  Ludovic Courtès  <ludo@gnu.org>

	* inline.h (SCM_C_USE_EXTERN_INLINE): New macro.  Use it to make
	sure "extern" declarations are produced when "extern inline" is
	used.  Simplify macrology around inline definitions.

2008-04-10  Ludovic Courtès  <ludo@gnu.org>

	* inline.h (SCM_C_EXTERN_INLINE): Special-case Apple's GCC
	4.0-based compiler, which doesn't support GNU inline semantics
	at all in C99 mode but doesn't define `__GNUC_STDC_INLINE__'.
	See http://thread.gmane.org/gmane.network.gnutls.general/1135 .

2008-04-10  Andy Wingo  <wingo@pobox.com>

	* struct.c (scm_struct_ref, scm_struct_set_x): "Light" structs
	have no hidden words (members of the SCM_STRUCT_DATA(x) array
	accessed with negative indices). In that case, determine the
	number of fields from the length of the struct layout
	descriptor. (Most GOOPS instances are light structs.)

	* goops.c (wrap_init): Initialize 'u' slots to 0, not some random
	SCM value.

	* goops.c (get_slot_value, set_slot_value): In the struct
	allocation case, don't poke the slots array directly -- we should
	go through struct-ref/struct-set! code so that we get the
	permissions and allocation ('u' versus 'p') correct.

2008-04-03  Ludovic Courtès  <ludo@gnu.org>

	* inline.h (SCM_C_EXTERN_INLINE): New macro, addresses the
	"extern inline" semantic change in C99 mode with GCC 4.3 and
	later and the warning in C99 mode with GCC 4.2.  Use it in the
	inline function definitions.

2008-03-10  Ludovic Courtès  <ludo@gnu.org>

	* eval.c, filesys.c: Enclose `alloca' blob in `#ifndef alloca',